Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.5.1
======================================================================


General Changes
===============

- Fixed an IceGrid registry replication bug where database
  synchronization could fail on startup or connection establishment
  with the master if multiple applications refered to a replica group
  defined in another application which wasn't yet added.


======================================================================
Changes since version 3.5.0
======================================================================


General Changes
===============

- Moved instructions for building a source distribution to the Ice
  manual. See the section "Building Ice from Source" in the Release
  Notes.

- It's now possible to install an instrumentation observer with the
  communicator initialization data structure and still have the
  metrics administrative facet enabled. Previously, installing an
  observer would disable the metrics facet.

- IceGrid database replication now keeps track of a serial number to
  compare the slave and master databases on startup. A slave database
  with a more recent serial number than the master database will no
  longer be overwritten when the slave connects and synchronizes its
  database with the master. Instead, an error message will be printed
  on both the master and slave consoles and the slave connection will
  be rejected by the master.

  Upon getting this error, the IceGrid administrator can decide which
  database to keep and either initialize the master database with the
  slave database or vice-versa. A new --initdb-from-replica=<replica>
  command-line option has been added to allow initializing a registry